<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minimal_effort_controller</name>
  <version>0.0.0</version>
  <description>The minimal_effort_controller package</description>
  <maintainer email="nicodemus.soh@gmail.com">Nicodemus Soh</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>effort_controller_base</depend>
  <depend>controller_interface</depend>
  <depend>std_msgs</depend>
  <depend>debug_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/minimal_effort_controller_plugin.xml" />
  </export>
</package>